[package]
name = "icon"
version = "0.1.0"
authors = ["sacloud.users <sacloud.users@gmail.com>"]
edition = "2018"

[dependencies]

sacloud = { path = "../sacloud" }
tokio = { version = "1", features = ["full"] }
reqwest = {version = "^0.11", default-features = false, features = ["default-tls", "json", "multipart"]}
